--- a/scheduler/producer/requirements.txt
+++ b/scheduler/producer/requirements.txt
@@ -4,26 +4,33 @@ async-timeout==5.0.1
 billiard==4.2.1
 blinker==1.9.0
 celery==5.5.3
+certifi==2025.6.15
+charset-normalizer==3.4.2
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+dnspython==2.7.0
 Flask==3.1.1
 Flask-APScheduler==1.13.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 kombu==5.5.4
 MarkupSafe==3.0.2
 packaging==25.0
 prompt_toolkit==3.0.51
+pymongo==4.13.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 redis==6.2.0
+requests==2.32.4
 six==1.17.0
 typeguard==4.4.4
 typing_extensions==4.14.0
 tzdata==2025.2
 tzlocal==5.3.1
+urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
