--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.12
 
-WORKDIR /producer
+WORKDIR /app
 
 COPY requirements.txt .
 
@@ -8,7 +8,5 @@ RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
 
-EXPOSE 5000
-
-CMD ["python", "producer.py"]
+CMD ["python", "main.py"]
 
